Fixed "header out of screen in mobile viewport" bug

--- a/css/base/base.css
+++ b/css/base/base.css
@@ -1,7 +1,11 @@
 html {
     scroll-behavior: smooth;
     font-size: 16px;
-    height: 100vh;
+    /*height: 100vh;*/
+}
+
+:root {
+    --vh: 0;
 }
 
 @media screen and (max-width: 800px) {
@@ -18,6 +22,12 @@ body {
     margin: 0;
     overflow-x: hidden;
     overflow-y: hidden;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+}
+
+#content-wrapper {
+    /*height: 100vh;*/
 }
 
 p {
